authors, keywords 추가

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ license = "MIT"
 version = "0.1.0"
 edition = "2021"
 description = "Windows-proof safe file name generator."
+authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
+keywords = ["file", "filename"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
